--- a/index.html
+++ b/index.html
@@ -9,21 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        .footer-links {
-            margin-top: 10px;
-        }
-        .footer-links a {
-            color: rgba(255, 255, 255, 0.7);
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 0.9em;
-        }
-        .footer-links a:hover {
-            color: #fff;
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
     <div class="blur-background">
@@ -66,8 +51,8 @@
         <footer>
             <a href="https://100ideaz.com" target="_blank" rel="noopener noreferrer">© 100 Ideaz, LLC. 2024</a>
             <div class="footer-links">
-                <a href="terms.html">Terms</a>
-                <a href="privacy.html">Privacy</a>
+                <a href="terms/index.html">Terms</a>
+                <a href="privacy/index.html">Privacy</a>
             </div>
         </footer>
     </div>
