Update Discord redirect URL in index.html to new invite link

--- a/help/index.html
+++ b/help/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://discord.gg/span">
+    <meta http-equiv="refresh" content="0; url=https://discord.gg/AHHvRWf8X6">
     <title>Redirecting to Discord - Span AI</title>
     <link rel="stylesheet" href="../style.css">
     <style>
@@ -62,7 +62,7 @@
         <div class="redirect-message">
             <h1>Redirecting to Discord</h1>
             <p>You are being redirected to our Discord server. If you are not redirected automatically, please click the button below.</p>
-            <a href="https://discord.gg/span" class="redirect-link">Join our Discord</a>
+            <a href="https://discord.gg/AHHvRWf8X6" class="redirect-link">Join our Discord</a>
         </div>
     </main>
 
